fix: cell borders overlapping

--- a/src/components/Cell/Cell.scss
+++ b/src/components/Cell/Cell.scss
@@ -6,7 +6,8 @@
   min-width: $default-cell-min-width;
   height: $default-cell-height;
   background-color: $default-cell-background-color;
-  border: $default-cell-border-width solid $default-cell-border-color;
+  border-right: $default-cell-border-width solid $default-cell-border-color;
+  border-bottom: $default-cell-border-width solid $default-cell-border-color;
   cursor: pointer;
   padding: 0 0.5rem;
   overflow: hidden;
